# triggergram

./: .gitignore  README.md  pyproject.toml
PhotoAlbumBLL/: Class1.cs  PhotoAlbumBLL.csproj
PhotoAlbumBLL/DTO/: ClaimedUserDTO.cs  CommentDTO.cs  EmojiDTO.cs  GroupedEmojiDTO.cs  NewPhotoDTO.cs  NewUserDTO.cs  PhotoDTO.cs  PostDTO.cs  SearchTagDTO.cs  UserDTO.cs  UserRoleDTO.cs  UsersEmojiDTO.cs
PhotoAlbumBLL/Dependencies/: UnitOfWorkServiceProvider.cs
PhotoAlbumBLL/Interfaces/: IAuthService.cs  ICommentService.cs  IEmojiService.cs  IPhotoService.cs  IPostService.cs  ITagService.cs  IUserService.cs
PhotoAlbumBLL/Security/: EncryptedPassword.cs
PhotoAlbumBLL/Services/: AuthService.cs  CommentService.cs  EmojiService.cs  PhotoService.cs  PostService.cs  TagService.cs  UserService.cs
PhotoAlbumDAL/: Class1.cs  DesignTimeDbContextFactory.cs  PhotoAlbumDAL.csproj
PhotoAlbumDAL/Configs/: EmojiDefaultDataSet.cs  EmojiMarkBaseConfig.cs  PhotoBaseConfig.cs  PhotoPostBaseConfig.cs  PhotoPostCommentBaseConfig.cs  PostEmojiMarkBaseConfig.cs  PostSearchTagBaseConfig.cs  SearchTagBaseConfig.cs  UserBaseConfig.cs  UserRoleBaseConfig.cs  UserRoleDefaultDataSet.cs
WebPhotoAlbum/: Program.cs  Startup.cs  WebPhotoAlbum.csproj  admin.txt  appsettings.json
account-functions/: account-functions.csproj  create-account.cs
frontend/: components.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
static/: angular.json  index.html  karma.conf.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
triggers/: Program.cs  Users.cs
(+147 files in other folders)
