[tool.poetry]
name = "triggergram"
version = "0.1.0"
description = "A serverless media sharing platform"
authors = ["Anton Kozyriev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.24"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^24.8.0"
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
